--- a/2.md
+++ b/2.md
@@ -1,14 +1,13 @@
 ## **Raju Ahmed**
 
-Backend Engineer (Go | Node.js | TypeScript)
-
+Backend Engineer (Go | Node.js | TypeScript) 
 Recommendation Systems • Data Pipelines • High-Traffic APIs
 
-📧 [rajuahmed1708@gmail.com](mailto:rajuahmed1708@gmail.com)
+[rajuahmed1708@gmail.com](mailto:rajuahmed1708@gmail.com)
 
-🔗 LinkedIn: [https://www.linkedin.com/in/raju-ahmed-9a4770242](https://www.linkedin.com/in/raju-ahmed-9a4770242)
+LinkedIn: [https://www.linkedin.com/in/raju-ahmed-9a4770242](https://www.linkedin.com/in/raju-ahmed-9a4770242)
 
-💻 GitHub: [http://github.com/raju-mechatronics](http://github.com/raju-mechatronics)
+GitHub: [http://github.com/raju-mechatronics](http://github.com/raju-mechatronics)
 
 ---
 
