--- a/2.md
+++ b/2.md
@@ -1,13 +1,9 @@
-## **Raju Ahmed**
-
-Backend Engineer (Go | Node.js | TypeScript) 
-Recommendation Systems • Data Pipelines • High-Traffic APIs
-
-[rajuahmed1708@gmail.com](mailto:rajuahmed1708@gmail.com)
-
-LinkedIn: [https://www.linkedin.com/in/raju-ahmed-9a4770242](https://www.linkedin.com/in/raju-ahmed-9a4770242)
-
-GitHub: [http://github.com/raju-mechatronics](http://github.com/raju-mechatronics)
+## Raju Ahmed 
+Backend Engineer (Go | Node.js | TypeScript)  
+Recommendation Systems • Data Pipelines • High-Traffic APIs  
+[rajuahmed1708@gmail.com](mailto:rajuahmed1708@gmail.com)  
+LinkedIn: [https://www.linkedin.com/in/raju-ahmed-9a4770242](https://www.linkedin.com/in/raju-ahmed-9a4770242)  
+GitHub: [http://github.com/raju-mechatronics](http://github.com/raju-mechatronics) 
 
 ---
 
@@ -28,7 +24,6 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 **Recommendation Systems:** Ranking models, scoring logic, user behavior analytics, personalization pipelines
 **Data & Analytics:** ClickHouse, BigQuery concepts, event ingestion, real-time analytics
 **Databases:** PostgreSQL, MySQL, MongoDB, Redis, Qdrant
-**Search:** Elasticsearch / OpenSearch
 **Cloud & DevOps:** AWS, Google Cloud Platform, Docker, CI/CD, GitLab
 **Observability:** Logging, monitoring, metrics, performance tuning
 **Practices:** Clean architecture, scalable design, testing, maintainability, agile collaboration
@@ -37,14 +32,13 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 
 ## **PROFESSIONAL EXPERIENCE**
 
-### Software Engineer — Nusratech Pte. Ltd. (GotiPath) 
-
+### Software Engineer — Nusratech Pte. Ltd. (GotiPath)  
 **Aug 2025 – Present | Dhaka, Bangladesh**
 
 * Leading backend development of a **large-scale recommendation engine** powering personalized content feeds.
 * Designed ranking logic using user-behavior signals, watch history, and similarity scoring.
-* Built **high-traffic APIs** in Go and Node.js (TypeScript) serving millions of users.
-* Implemented analytics and ingestion pipelines using **ClickHouse, Kafka, Redis, Elasticsearch**.
+* Built **high-traffic APIs** in Go serving millions of users.
+* Implemented analytics and ingestion pipelines using **ClickHouse, Kafka, Redis**.
 * Collaborated with product managers and data teams to improve recommendation accuracy and latency.
 
 **Impact:** System supports **20M+ users and 1M+ items**, improving personalization quality and response speed.
@@ -104,9 +98,9 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 
 ### **Large-Scale Recommendation Engine**
 
-* Built recommendation system from scratch handling **20M users & 1M items**
+* Built recommendation system from scratch handling **20M+ users & 1M+ items**
 * Designed scoring logic, ranking algorithms, and similarity models
-* Built ingestion + analytics pipeline using **Go + ClickHouse**
+* Built a high-throughput ingestion and analytics pipeline using **Go + ClickHouse**
 * Enabled personalized feeds, trending logic, and behavioral insights
 
 ### **Distributed Analytics Data Pipeline**
@@ -114,6 +108,13 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 * Designed event processing architecture for high-volume user activity tracking
 * Optimized ClickHouse schema and queries for analytical workloads
 * Delivered real-time BI insights for product and data teams
+
+### **Video Streaming Platform — Ekkademy**
+
+* Core backend engineer for a **production video streaming and learning platform** at **Sheba Innovations Ltd.**
+* Built scalable backend services and APIs using **Node.js, TypeScript, MongoDB, and GCP**
+* Implemented streaming workflows, course progress tracking, and analytics pipelines
+* Supported real users on the live platform: **https://ekkademy.net**
 
 ---
 
@@ -130,7 +131,7 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 
 *  **DefinitelyTyped (Chrome Types)**
 
-  * Type definition contribution for Chrome ecosystem
+  * Type definition contribution for the Chrome ecosystem
   * PR #68298 — https://github.com/DefinitelyTyped/DefinitelyTyped/pull/68298
 
 Also creator of **EasyFS**, a cross-platform Go file-system utility library.
@@ -139,8 +140,8 @@ Also creator of **EasyFS**, a cross-platform Go file-system utility library.
 
 ## **EDUCATION**
 
-**B.Sc. in Mechatronics Engineering**
-Rajshahi University of Engineering & Technology
+**B.Sc. in Mechatronics Engineering**  
+Rajshahi University of Engineering & Technology  
 2017 – 2021
 
 ---
