--- a/2.md
+++ b/2.md
@@ -7,17 +7,15 @@ GitHub: [http://github.com/raju-mechatronics](http://github.com/raju-mechatronic
 
 ---
 
-## **PROFESSIONAL SUMMARY**
+#### **PROFESSIONAL SUMMARY**
 
-Backend Engineer with **5+ years of experience** building scalable APIs, recommendation systems, and large-scale data pipelines using **Node.js, TypeScript, and Go**.
-
-Experienced in developing **personalization engines**, behavioral analytics pipelines, and high-traffic backend services handling **millions of users and events**. Strong production experience with **ClickHouse, Redis, Kafka, PostgreSQL, MongoDB, AWS, and Google Cloud Platform**.
-
+Backend Engineer with **5+ years of experience** building scalable APIs, recommendation systems, and large-scale data pipelines using **Node.js, TypeScript, and Go**.  
+Experienced in developing **personalization engines**, behavioral analytics pipelines, and high-traffic backend services handling **millions of users and events**. Strong production experience with **ClickHouse, Redis, Kafka, PostgreSQL, MongoDB, AWS, and Google Cloud Platform**.  
 Collaborates closely with engineers, analysts, and data scientists to deliver fast, reliable recommendation logic and data-driven backend systems. Active open-source contributor to popular Go frameworks including Gin and Echo.
 
 ---
 
-## **CORE SKILLS**
+#### **CORE SKILLS**
 
 **Languages:** TypeScript, Go, JavaScript, Python  
 **Backend:** Node.js, REST APIs, Microservices, WebSockets, Event-Driven Systems  
@@ -30,25 +28,21 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 
 ---
 
-## **PROFESSIONAL EXPERIENCE**
+#### **PROFESSIONAL EXPERIENCE**
 
-### Software Engineer — Nusratech Pte. Ltd. (GotiPath)  
-**Aug 2025 – Present | Dhaka, Bangladesh**
-
+#### Software Engineer — Nusratech Pte. Ltd. (GotiPath)  
+**Aug 2025 – Present | Dhaka, Bangladesh**  
 * Leading backend development of a **large-scale recommendation engine** powering personalized content feeds.
 * Designed ranking logic using user-behavior signals, watch history, and similarity scoring.
 * Built **high-traffic APIs** in Go serving millions of users.
 * Implemented analytics and ingestion pipelines using **ClickHouse, Kafka, Redis**.
-* Collaborated with product managers and data teams to improve recommendation accuracy and latency.
-
+* Collaborated with product managers and data teams to improve recommendation accuracy and latency.  
 **Impact:** System supports **20M+ users and 1M+ items**, improving personalization quality and response speed.
 
 ---
 
-### **Back End Developer — Sheba Innovations Ltd.**
-
-**May 2024 – Mar 2025 | Dhaka, Bangladesh**
-
+#### **Back End Developer — Sheba Innovations Ltd.**  
+**May 2024 – Mar 2025 | Dhaka, Bangladesh**  
 * Core backend engineer for **Ekkademy.net**, a video-streaming EdTech platform.
 * Built microservices and REST APIs using **Node.js, TypeScript, MongoDB, GCP**.
 * Implemented analytics tracking pipelines and streaming workflows.
@@ -56,61 +50,50 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 
 ---
 
-### **Software Engineer — webmedia.ai**
-
-**Jan 2024 – Feb 2025 | Remote | Part-time**
-
+#### **Software Engineer — webmedia.ai**  
+**Jan 2024 – Feb 2025 | Remote | Part-time**  
 * Developed scalable SaaS backend using **Go + TypeScript** with real-time WebSocket features.
 * Integrated **MongoDB, Redis, Google Cloud Storage** for scalable persistence and caching.
 * Delivered high-performance APIs and backend architecture improvements.
 
 ---
 
-### **Software Developer — SITEschrift (Germany)**
-
-**Oct 2022 – Dec 2023 | Remote**
-
+#### **Software Developer — SITEschrift (Germany)**  
+**Oct 2022 – Dec 2023 | Remote**  
 * Built Node.js APIs, Chrome extensions, and OpenAI integrations.
 * Delivered frontend features with React + Tailwind when required.
 
 ---
 
-### **Software Engineer Intern — Macroman HQ**
-
-**Feb 2022 – Aug 2022 | Bangladesh**
-
+#### **Software Engineer Intern — Macroman HQ**  
+**Feb 2022 – Aug 2022 | Bangladesh**  
 * Maintained PHP/Symfony e-commerce platform and resolved **50+ production bugs**.
 * Improved checkout/cart flow (**+20% retention, −25% abandonment**).
 * Optimized heavy ORM queries to raw SQL (**~30% faster**).
 
 ---
 
-### **Freelance Software Developer — Upwork & Fiverr**
-
-**2018 – 2022**
-
+#### **Freelance Software Developer — Upwork & Fiverr**  
+**2018 – 2022**  
 * Delivered **100+ backend/API projects** with Node.js and SQL/NoSQL databases.
 * Maintained **98%+ client satisfaction** and built scalable services across multiple industries.
 
 ---
 
-## **KEY PROJECTS**
+#### **KEY PROJECTS**
 
-### **Large-Scale Recommendation Engine**
-
+#### **Large-Scale Recommendation Engine**  
 * Built recommendation system from scratch handling **20M+ users & 1M+ items**
 * Designed scoring logic, ranking algorithms, and similarity models
 * Built a high-throughput ingestion and analytics pipeline using **Go + ClickHouse**
 * Enabled personalized feeds, trending logic, and behavioral insights
 
-### **Distributed Analytics Data Pipeline**
-
+#### **Distributed Analytics Data Pipeline**  
 * Designed event processing architecture for high-volume user activity tracking
 * Optimized ClickHouse schema and queries for analytical workloads
 * Delivered real-time BI insights for product and data teams
 
-### **Video Streaming Platform — Ekkademy**
-
+#### **Video Streaming Platform — Ekkademy**  
 * Core backend engineer for a **production video streaming and learning platform** at **Sheba Innovations Ltd.**
 * Built scalable backend services and APIs using **Node.js, TypeScript, MongoDB, and GCP**
 * Implemented streaming workflows, course progress tracking, and analytics pipelines
@@ -118,27 +101,24 @@ Collaborates closely with engineers, analysts, and data scientists to deliver fa
 
 ---
 
-## Open Source Contributions
+#### Open Source Contributions
 
 *  **Gin Framework**
   * PR #4502 — https://github.com/gin-gonic/gin/pull/4502
   * PR #4483 — https://github.com/gin-gonic/gin/pull/4483
 
-*  **Echo Framework**
-
+*  **Echo Framework**  
   * Contribution merged to one of the most popular Go web frameworks
   * PR #2875 — https://github.com/labstack/echo/pull/2875
 
-*  **DefinitelyTyped (Chrome Types)**
-
+*  **DefinitelyTyped (Chrome Types)**  
   * Type definition contribution for the Chrome ecosystem
-  * PR #68298 — https://github.com/DefinitelyTyped/DefinitelyTyped/pull/68298
-
+  * PR #68298 — https://github.com/DefinitelyTyped/DefinitelyTyped/pull/68298  
 Also creator of **EasyFS**, a cross-platform Go file-system utility library.
 
 ---
 
-## **EDUCATION**
+#### **EDUCATION**
 
 **B.Sc. in Mechatronics Engineering**  
 Rajshahi University of Engineering & Technology  
@@ -146,16 +126,15 @@ Rajshahi University of Engineering & Technology
 
 ---
 
-## **LANGUAGES**
+#### **LANGUAGES**
 
 English — Professional working proficiency
 (Fiverr English Test: **8.8/10 — Top 30%**)
 
 ---
 
-## **RELOCATION & WORK STYLE**
+#### **RELOCATION & WORK STYLE**
 
 * Open to **Relocate and onsite work in Hamburg or Berlin**
 * Experienced in **international English-speaking agile teams**
-* Comfortable owning backend systems **end-to-end**, including recommendation logic and data pipelines
 
